--- a/about.html
+++ b/about.html
@@ -172,9 +172,9 @@
         <div class="navbar-collapse collapse">
           
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="file:///C:/Users/Gene/Desktop/RonsPortfolio/index.html">portfolio</a></li>
+            <li><a href="/index.html">portfolio</a></li>
             <li class="active"><a href="#">about me</a></li>
-            <li><a href="file:///C:/Users/Gene/Desktop/RonsPortfolio/contact.html">contact me</a></li>
+            <li><a href="/contact.html">contact me</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
