--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
           
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="#">portfolio</a></li>
-            <li><a href="file:///C:/Users/Gene/Desktop/RonsPortfolio/about.html">about me</a></li>
-            <li><a href="file:///C:/Users/Gene/Desktop/RonsPortfolio/contact.html">contact me</a></li>
+            <li><a href="/about.html">about me</a></li>
+            <li><a href="/contact.html">contact me</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -229,8 +229,8 @@
         <div class="row">
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="C:/Users/Gene\Desktop/RonsPortfolio/images/after.png">
-                        <img width="500" height="400" src="C:/Users/Gene\Desktop/RonsPortfolio/images/after.png" alt="Park">
+                    <a class="lightbox" href="/images/after.png">
+                        <img width="500" height="400" src="/images/after.png" alt="Park">
                     </a>
                     <div class="caption">
                         <!--<h3>After</h3>--->
@@ -243,8 +243,8 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="C:/Users/Gene\Desktop/RonsPortfolio//images/survival-night.png">
-                        <img width="500" height="400" src="C:/Users/Gene\Desktop/RonsPortfolio//images/survival-night.png" alt="Bridge">
+                    <a class="lightbox" href="/images/survival-night.png">
+                        <img width="500" height="400" src="/images/survival-night.png" alt="Bridge">
                     </a>
                     <div class="caption">
                         <span style="font-size: 20px; font-weight: bolder;">SURVIVAL NIGHT-</span>
@@ -256,8 +256,8 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="C:/Users/Gene\Desktop/RonsPortfolio//images/cemented.png">
-                        <img width="500" height="400" src="C:/Users/Gene\Desktop/RonsPortfolio//images/cemented.png" alt="Tuneel">
+                    <a class="lightbox" href="/images/cemented.png">
+                        <img width="500" height="400" src="/images/cemented.png" alt="Tuneel">
                     </a>
                     <div class="caption">
                         <span style="font-size: 20px; font-weight: bolder;">CEMENTED-</span>
@@ -269,8 +269,8 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="C:/Users/Gene\Desktop/RonsPortfolio//images/pc-cat.png">
-                        <img width="500" height="400" src="C:/Users/Gene\Desktop/RonsPortfolio//images/pc-cat.png" alt="Coast">
+                    <a class="lightbox" href="/images/pc-cat.png">
+                        <img width="500" height="400" src="/images/pc-cat.png" alt="Coast">
                     </a>
                     <div class="caption">
                         <span style="font-size: 20px; font-weight: bolder;">PC Cat-</span>
@@ -282,8 +282,8 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="C:/Users/Gene\Desktop/RonsPortfolio//images/rails.jpg">
-                        <img width="500" height="400" src="C:/Users/Gene\Desktop/RonsPortfolio//images/rails.jpg" alt="Rails">
+                    <a class="lightbox" href="/images/rails.jpg">
+                        <img width="500" height="400" src="/images/rails.jpg" alt="Rails">
                     </a>
                     <div class="caption">
                         <span style="font-size: 20px; font-weight: bolder;">CREEP AWAY-</span>
@@ -295,8 +295,8 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="C:/Users/Gene\Desktop/RonsPortfolio//images/traffic.jpg">
-                        <img width="500" height="400" src="C:/Users/Gene\Desktop/RonsPortfolio//images/traffic.jpg" alt="Traffic">
+                    <a class="lightbox" href="/images/traffic.jpg">
+                        <img width="500" height="400" src="/images/traffic.jpg" alt="Traffic">
                     </a>
                     <div class="caption">
                         <span style="font-size: 20px; font-weight: bolder;">CREEP AWAY-</span>
