--- a/contact.html
+++ b/contact.html
@@ -172,8 +172,8 @@
         <div class="navbar-collapse collapse">
           
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="file:///C:/Users/Gene/Desktop/RonsPortfolio/index.html">portfolio</a></li>
-            <li><a href="file:///C:/Users/Gene/Desktop/RonsPortfolio/about.html">about me</a></li>
+            <li><a href="/index.html">portfolio</a></li>
+            <li><a href="/about.html">about me</a></li>
             <li class="active"><a href="#">contact me</a></li>
           </ul>
         </div><!--/.nav-collapse -->
