--- a/contact.html
+++ b/contact.html
@@ -189,9 +189,9 @@
         <div class="navbar-collapse collapse">
           
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">portfolio</a></li>
+            <li><a href="/index.html">portfolio</a></li>
             <li><a href="/about.html">about me</a></li>
-            <li><a href="/contact.html">contact me</a></li>
+            <li class="active"><a href="#">contact me</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
