--- a/index.html
+++ b/index.html
@@ -131,6 +131,14 @@
 
 			}
 			
+			@media (min-width: 375px) {
+				.tz-gallery {
+						padding: 2px;
+					}	
+			}
+			
+			
+			
 			@media (min-width: 400px) {
 			  .big-logo-row #h1 {
 				font-size: 4.5em;
@@ -157,6 +165,11 @@
 				padding-bottom: 30px;
 				margin-left: 20px;
 			  }
+			  
+				.tz-gallery {
+						padding: 40px;
+					}	
+
 			}
 			@media (min-width: 1200px) {
 			  .big-logo-row #h1 {
