--- a/contact.html
+++ b/contact.html
@@ -207,39 +207,12 @@
         </div><!--/.row -->
       </div><!--/.container -->
     </div><!--/.container-fluid -->
-
-    	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-<section id="contact" class="content-section text-center">
-        <div class="contact-section">
-            <div class="container">
-			  <h2>Contact me</h2>
-              <p>Feel free to send me a message</p>
-              <div class="row">
-                <div class="col-md-8 col-md-offset-2">
-                  <form class="form-horizontal">
-                    <div class="form-group">
-                      <label for="exampleInputName2">Name</label>
-                      <input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">
-                    </div>
-                    <div class="form-group">
-                      <label for="exampleInputEmail2">Email</label>
-                      <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane.doe@example.com">
-                    </div>
-                    <div class="form-group ">
-                      <label for="exampleInputText">Your Message</label>
-                     <textarea  class="form-control" placeholder="Description"></textarea> 
-                    </div>
-                    <button type="submit" class="btn btn-default">Send Message</button>
-                  </form>
-
-                  <hr>
-
-                  </ul>
-                </div>
-              </div>
-            </div>
-        </div>
-</section>
+	
+	
+	<div class="text-center">
+		<h1>Contact Me</h1>
+		<p></p>
+	</div>
 
 
 			
