--- a/index.html
+++ b/index.html
@@ -225,7 +225,6 @@
       <div class="row">
         <div class="col-sm-8">
 		<br/>
-          <!---<p style="font-size:20px">Dolor sit amet, consectetur adipisicing elit. Id maxime repellat repellendus porro voluptas laudantium similique eveniet quis perferendis beatae commodi sunt ullam provident dolorum doloribus esse accusamus dolores. Corrupti.</p>--->
         </div><!--/.col-xs-12 -->
       </div><!--/.row -->
     </div><!--/.container -->
@@ -234,8 +233,6 @@
 
     
     <div class="gallery-container">
-
-    <!--<p class="page-description text-center">Clean Layout With Minimal Styles</p>-->
     
     <div class="tz-gallery">
 
@@ -247,10 +244,10 @@
                     </a>
                     <div class="caption">
                         <!--<h3>After</h3>--->
-                        <span style="font-size: 20px; font-weight: bolder;">AFTER-</span>
-                        <span style="font-size: 20px;">
+                        <span style="font-size: 20px; font-weight: bolder; text-align: center;">AFTER</span>
+                        <!--<span style="font-size: 20px;">
                              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        </span>
+                        </span>-->
                     </div>
                 </div>
             </div>
@@ -260,10 +257,7 @@
                         <img width="500" height="400" src="/images/survival-night.png" alt="Bridge">
                     </a>
                     <div class="caption">
-                        <span style="font-size: 20px; font-weight: bolder;">SURVIVAL NIGHT-</span>
-                        <span style="font-size: 20px;">
-                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        </span>
+                        <span style="font-size: 20px; font-weight: bolder; text-align: center;">SURVIVAL NIGHT</span>
                     </div>
                 </div>
             </div>
@@ -273,10 +267,7 @@
                         <img width="500" height="400" src="/images/cemented.png" alt="Tuneel">
                     </a>
                     <div class="caption">
-                        <span style="font-size: 20px; font-weight: bolder;">CEMENTED-</span>
-                        <span style="font-size: 20px;">
-                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        </span>
+                        <span style="font-size: 20px; font-weight: bolder; text-align: center;">CEMENTED</span>
                     </div>
                 </div>
             </div>
@@ -286,10 +277,7 @@
                         <img width="500" height="400" src="/images/pc-cat.png" alt="Coast">
                     </a>
                     <div class="caption">
-                        <span style="font-size: 20px; font-weight: bolder;">PC Cat-</span>
-                        <span style="font-size: 20px;">
-                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        </span>
+                        <span style="font-size: 20px; font-weight: bolder; text-align: center;">PC CAT</span>
                     </div>
                 </div>
             </div>
@@ -299,10 +287,7 @@
                         <img width="500" height="400" src="/images/rails.jpg" alt="Rails">
                     </a>
                     <div class="caption">
-                        <span style="font-size: 20px; font-weight: bolder;">CREEP AWAY-</span>
-                        <span style="font-size: 20px;">
-                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        </span>
+                        <span style="font-size: 20px; font-weight: bolder; text-align:center;">CREEP AWAY</span>
                     </div>
                 </div>
             </div>
@@ -312,10 +297,7 @@
                         <img width="500" height="400" src="/images/traffic.jpg" alt="Traffic">
                     </a>
                     <div class="caption">
-                        <span style="font-size: 20px; font-weight: bolder;">CREEP AWAY-</span>
-                        <span style="font-size: 20px;">
-                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        </span>
+                        <span style="font-size: 20px; font-weight: bolder; text-align: center;">MAN VS GOD</span>
                     </div>
                 </div>
             </div>
