--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         <div class="row">
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="/images/after.png">
+                    <a class="lightbox" href="/after.html">
                         <img width="500" height="400" src="/images/after.png" alt="Park">
                     </a>
                     <div class="caption">
@@ -253,7 +253,7 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="/images/survival-night.png">
+                    <a class="lightbox" href="#">
                         <img width="500" height="400" src="/images/survival-night.png" alt="Bridge">
                     </a>
                     <div class="caption">
@@ -263,7 +263,7 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="/images/cemented.png">
+                    <a class="lightbox" href="#">
                         <img width="500" height="400" src="/images/cemented.png" alt="Tuneel">
                     </a>
                     <div class="caption">
@@ -273,7 +273,7 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="/images/pc-cat.png">
+                    <a class="lightbox" href="#">
                         <img width="500" height="400" src="/images/pc-cat.png" alt="Coast">
                     </a>
                     <div class="caption">
@@ -283,7 +283,7 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="/images/rails.jpg">
+                    <a class="lightbox" href="#">
                         <img width="500" height="400" src="/images/rails.jpg" alt="Rails">
                     </a>
                     <div class="caption">
@@ -293,7 +293,7 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="/images/traffic.jpg">
+                    <a class="lightbox" href="/manvsgod.html">
                         <img width="500" height="400" src="/images/traffic.jpg" alt="Traffic">
                     </a>
                     <div class="caption">
