--- a/about.html
+++ b/about.html
@@ -183,7 +183,7 @@
             <span class="icon-bar"></span>
           </button>
           <div class="small-logo-container">
-            <a class="small-logo" href="#">Ron Makhouli</a>
+            <a class="small-logo" href="/">Ron Makhouli</a>
           </div>
         </div>
         <div class="navbar-collapse collapse">
@@ -201,7 +201,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12 big-logo-container">
-            <span id="h1" class="big-logo"><strong class=" font-effect-shadow-multiple">Ron Makhouli</strong></span>
+            <span id="h1" class="big-logo" href="/"><strong class=" font-effect-shadow-multiple">Ron Makhouli</strong></span>
             <!---<span class="hidden-xs"><img width="100" height="100" class="pull-right img-responsive" src="magnet.png" alt=""/></span>--->
           </div><!--/.col-xs-12 -->
         </div><!--/.row -->
