--- a/manvsgod.html
+++ b/manvsgod.html
@@ -205,7 +205,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12 big-logo-container">
-            <span id="h1" class="big-logo" href="/"><strong class=" font-effect-shadow-multiple">Ron Makhouli</strong></span>
+            <span id="h1" class="big-logo"><a href="/"><strong class=" font-effect-shadow-multiple">Ron Makhouli</strong></a></span>
             <!---<span class="hidden-xs"><img width="100" height="100" class="pull-right img-responsive" src="magnet.png" alt=""/></span>--->
           </div><!--/.col-xs-12 -->
         </div><!--/.row -->
