--- a/index.html
+++ b/index.html
@@ -102,11 +102,12 @@
 
 			.small-logo {
 			font-family: 'Rock Salt', cursive;
-			  color: white;
+			  color: white !important;
 			  /*font-size: 2.5em;*/
 			  font-size: 34px;
 			  padding-bottom: 2px;
 			}
+			
 
 			/* *********************************
 					   Big Logo
@@ -214,7 +215,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12 big-logo-container">
-             <span id="h1" class="big-logo"><a href="/"><strong class=" font-effect-shadow-multiple">Ron Makhouli</strong></a></span>
+             <span id="h1" class="big-logo"><a id="big-logo-id" href="/"><strong class=" font-effect-shadow-multiple">Ron Makhouli</strong></a></span>
             <!---<span class="hidden-xs"><img width="100" height="100" class="pull-right img-responsive" src="magnet.png" alt=""/></span>--->
           </div><!--/.col-xs-12 -->
         </div><!--/.row -->
