--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>	
 		<meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="Ron Makhouli - Game Designer">
         <title>Portfolio | Ron Makhouli</title>
         <link href="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
