--- a/after.html
+++ b/after.html
@@ -223,6 +223,9 @@
 		  <img class="center-block img-responsive" src="/images/after/after-2.png" alt="The Ritual Elements" />
 		  
 		  <img class="center-block img-responsive" src="/images/after/after-3.png" alt="The Deep Mine of the Church" />
+		  
+		  <img class="center-block img-responsive" src="/images/after/after-4.png" alt="The Cemetery" />
+
       </div><!--/.row -->
     </div><!--/.container -->
 
