--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="#">
+                    <a class="lightbox" href="/survival-night.html">
                         <img width="500" height="400" src="/images/survival-night.png" alt="Bridge">
                     </a>
                     <div class="caption">
@@ -265,7 +265,7 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="#">
+                    <a class="lightbox" href="/cemented.html">
                         <img width="500" height="400" src="/images/cemented.png" alt="Tuneel">
                     </a>
                     <div class="caption">
@@ -275,7 +275,7 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="#">
+                    <a class="lightbox" href="/pc-cat.html">
                         <img width="500" height="400" src="/images/pc-cat.png" alt="Coast">
                     </a>
                     <div class="caption">
