--- a/index.html
+++ b/index.html
@@ -223,11 +223,12 @@
       </div><!--/.container -->
     </div><!--/.container-fluid -->
 
+
     <div class="container">
       <div class="row">
-        <div class="col-sm-8">
-		<br/>
-        </div><!--/.col-xs-12 -->
+		<div class="col-xs-12">
+        <a href="/manvsgod.html"><img alt="Man Vs God" style="margin-top: 24px; margin-bottom: 24px;" class="center-block img-responsive" height="80%" width="80%" src="C:/Users/Gene/Dev/makulix.github.io/images/mv2.png" /></a>
+		</div>
       </div><!--/.row -->
     </div><!--/.container -->
 
@@ -242,7 +243,7 @@
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                     <a class="lightbox" href="/after.html">
-                        <img width="500" height="400" src="/images/after.png" alt="Park">
+                        <img width="500" height="400" src="/images/after.png" alt="After">
                     </a>
                     <div class="caption">
                         <!--<h3>After</h3>--->
@@ -256,7 +257,7 @@
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                     <a class="lightbox" href="/survival-night.html">
-                        <img width="500" height="400" src="/images/survival-night.png" alt="Bridge">
+                        <img width="500" height="400" src="/images/survival-night.png" alt="Survival Night">
                     </a>
                     <div class="caption">
                         <span style="font-size: 20px; font-weight: bolder; text-align: center;">SURVIVAL NIGHT</span>
@@ -266,7 +267,7 @@
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                     <a class="lightbox" href="/cemented.html">
-                        <img width="500" height="400" src="/images/cemented.png" alt="Tuneel">
+                        <img width="500" height="400" src="/images/cemented.png" alt="Cemented">
                     </a>
                     <div class="caption">
                         <span style="font-size: 20px; font-weight: bolder; text-align: center;">CEMENTED</span>
@@ -286,7 +287,7 @@
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                     <a class="lightbox" href="#">
-                        <img width="500" height="400" src="/images/rails.jpg" alt="Rails">
+                        <img width="500" height="400" src="/images/rails.jpg" alt="Creep Away">
                     </a>
                     <div class="caption">
                         <span style="font-size: 20px; font-weight: bolder; text-align:center;">CREEP AWAY</span>
@@ -295,11 +296,11 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="/manvsgod.html">
-                        <img width="500" height="400" src="/images/traffic.jpg" alt="Traffic">
+                    <a class="lightbox" href="#">
+                        <img width="500" height="400" src="/images/traffic.jpg" alt="Look Away">
                     </a>
                     <div class="caption">
-                        <span style="font-size: 20px; font-weight: bolder; text-align: center;">MAN VS GOD</span>
+                        <span style="font-size: 20px; font-weight: bolder; text-align: center;">LOOK AWAY</span>
                     </div>
                 </div>
             </div>
