--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     <div class="container">
       <div class="row">
 		<div class="col-xs-12">
-        <a href="/manvsgod.html"><img alt="Man Vs God" style="margin-top: 24px; margin-bottom: 24px;" class="center-block img-responsive" height="80%" width="80%" src="C:/Users/Gene/Dev/makulix.github.io/images/mv2.png" /></a>
+        <a href="/manvsgod.html"><img alt="Man Vs God" style="margin-top: 24px; margin-bottom: 24px;" class="center-block img-responsive" height="80%" width="80%" src="/images/mv2.png" /></a>
 		</div>
       </div><!--/.row -->
     </div><!--/.container -->
