--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     <div class="container">
       <div class="row">
 		<div class="col-xs-12">
-        <a href="/manvsgod.html"><img id="main-img" alt="Man Vs God" style="margin-top: 24px; margin-bottom: 24px;" class="center-block img-responsive" src="C:/Users/Gene/Dev/makulix.github.io/images/mv2.png" /></a>
+        <a href="/manvsgod.html"><img id="main-img" alt="Man Vs God" style="margin-top: 24px; margin-bottom: 24px;" class="center-block img-responsive" src="/images/mv2.png" /></a>
 		</div>
       </div><!--/.row -->
     </div><!--/.container -->
@@ -247,7 +247,7 @@
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                     <a class="lightbox" href="/after.html">
-                        <img width="500" height="400" src="C:/Users/Gene/Dev/makulix.github.io/images/after.png" alt="After">
+                        <img width="500" height="400" src="/images/after.png" alt="After">
                     </a>
                     <div class="caption">
                         <!--<h3>After</h3>--->
@@ -261,7 +261,7 @@
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                     <a class="lightbox" href="/survival-night.html">
-                        <img width="500" height="400" src="C:/Users/Gene/Dev/makulix.github.io/images/survival-night.png" alt="Survival Night">
+                        <img width="500" height="400" src="/images/survival-night.png" alt="Survival Night">
                     </a>
                     <div class="caption">
                         <span style="font-size: 20px; font-weight: bolder; text-align: center;">SURVIVAL NIGHT</span>
@@ -271,7 +271,7 @@
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                     <a class="lightbox" href="/cemented.html">
-                        <img width="500" height="400" src="C:/Users/Gene/Dev/makulix.github.io/images/cemented.png" alt="Cemented">
+                        <img width="500" height="400" src="/images/cemented.png" alt="Cemented">
                     </a>
                     <div class="caption">
                         <span style="font-size: 20px; font-weight: bolder; text-align: center;">CEMENTED</span>
@@ -281,7 +281,7 @@
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                     <a class="lightbox" href="/pc-cat.html">
-                        <img width="500" height="400" src="C:/Users/Gene/Dev/makulix.github.io/images/pc-cat.png" alt="Coast">
+                        <img width="500" height="400" src="/images/pc-cat.png" alt="Coast">
                     </a>
                     <div class="caption">
                         <span style="font-size: 20px; font-weight: bolder; text-align: center;">PC CAT</span>
@@ -291,7 +291,7 @@
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                     <a class="lightbox" href="#">
-                        <img width="500" height="400" src="C:/Users/Gene/Dev/makulix.github.io/images/rails.jpg" alt="Creep Away">
+                        <img width="500" height="400" src="/images/rails.jpg" alt="Creep Away">
                     </a>
                     <div class="caption">
                         <span style="font-size: 20px; font-weight: bolder; text-align:center;">CREEP AWAY</span>
@@ -301,7 +301,7 @@
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                     <a class="lightbox" href="#">
-                        <img width="500" height="400" src="C:/Users/Gene/Dev/makulix.github.io/images/traffic.jpg" alt="Look Away">
+                        <img width="500" height="400" src="/images/traffic.jpg" alt="Look Away">
                     </a>
                     <div class="caption">
                         <span style="font-size: 20px; font-weight: bolder; text-align: center;">LOOK AWAY</span>
