--- a/about.html
+++ b/about.html
@@ -214,7 +214,7 @@
         <div class="col-sm-8">
 		<br/>
 		<h1>About me</h1>
-          <p style="font-size:20px">Dolor sit amet, consectetur adipisicing elit. Id maxime repellat repellendus porro voluptas laudantium similique eveniet quis perferendis beatae commodi sunt ullam provident dolorum doloribus esse accusamus dolores. Corrupti.</p>
+          <p style="font-size:20px">My name is Ron Makhouli and I am a game designer. I graduated from George Mason University with a bachelor’s degree in computer game design. Throughout my academic years, I have created many games that were put on the dean’s list as the best games of the semester. I am currently working on a unique game called Man vs God.</p>
         </div><!--/.col-xs-12 -->
       </div><!--/.row -->
     </div><!--/.container -->
