--- a/contact.html
+++ b/contact.html
@@ -211,7 +211,7 @@
 	
 	<div class="text-center">
 		<h1>Contact Me</h1>
-		<p>Email: ronmakhouli@gmail.com</p>
+		<p style="font-size: 20px;">Email: ronmakhouli@gmail.com</p>
 	</div>
 
 
