--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 			 
 			.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus {
 				color: #fff;
-				background-color: #636FA4;
+				background-color: #333;
 			}
 			
 
 			.navbar-inverse {
 			  /*background: rgba(62, 195, 246, 0);*/
-			  background: rgba(232,203,192,0);
+			  background: rgba(230,92,0,0);
 			  border-bottom: none;
 			  border-color: transparent;
 			}
@@ -113,14 +113,18 @@
 			/* *********************************
 					   Big Logo
 			  ********************************** */
-			.big-logo-row {
-			  #background: #DCDCDC;
-			  background: #E8CBC0; /* For browsers that do not support gradients */
-			  background: -webkit-linear-gradient(left top, #E8CBC0, #636FA4); /* For Safari 5.1 to 6.0 */
-			  background: -o-linear-gradient(bottom right, #E8CBC0, #636FA4); /* For Opera 11.1 to 12.0 */
-			  background: -moz-linear-gradient(bottom right, #E8CBC0, #636FA4); /* For Firefox 3.6 to 15 */
-			  background: linear-gradient(to bottom right, #E8CBC0, #636FA4); /* Standard syntax */
+
+			.big-logo-row{
+			
+			  background: #e65c00; /* For browsers that do not support gradients */
+			  background: -webkit-linear-gradient(left top, #e65c00, #F9D423); /* For Safari 5.1 to 6.0 */
+			  background: -o-linear-gradient(bottom right, #e65c00, #F9D423); /* For Opera 11.1 to 12.0 */
+			  background: -moz-linear-gradient(bottom right, #e65c00, #F9D423); /* For Firefox 3.6 to 15 */
+			  background: linear-gradient(to bottom right, #e65c00, #F9D423); /* Standard syntax */
 			}
+			
+			
+			
 			.big-logo-row .big-logo-container {
 			  padding-top: 50px;
 			  padding-bottom: 25px;
@@ -362,7 +366,8 @@
 
 $(window).scroll(function() {
   /*var navbarColor = "62,195,246";//color attr for rgba*/
-  var navbarColor = "232,203,192";
+  //var navbarColor = "232,203,192";
+  var navbarColor="230,92,0";
 
 
   var smallLogoHeight = $('.small-logo').height();
