--- a/after.html
+++ b/after.html
@@ -219,6 +219,11 @@
 		<h1 class="text-center">After</h1>
           <p style="font-size:20px">After is a horror game for PC. In this game, the player must follow God's orders by performing rituals and going deep into the temple.</p>
 		  
+		  <p style="font-size: 18px;"><i>Engine: Unreal Engine 4</i></p>
+		  <p style="font-size: 18px;"><i>Year: 2015</i></p>
+		  <p style="font-size: 18px;"><i>Role: Programming, Level Design, and Game Design</i></p>
+		  <p style="font-size: 18px;"><i>Team: 4</i></p>
+		  
 		  <div class="video-container">
 		  <iframe class="center-block" width="854" height="480" src="https://www.youtube.com/embed/ReIzwQ5LQ7w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		  </div>
