--- a/manvsgod.html
+++ b/manvsgod.html
@@ -236,6 +236,12 @@
           <p style="font-size:20px">Man Vs God is a VR and RTS hybrid game. This is a two player game that requires one player on PC and the other on HTC VIVE.
  This is a game about a god and a man who are in a constant battle against each other. </p>
  <p style="font-size:20px">The god sends his animals and causes natural disaster in order to destroy the man's town, while the man defends his town's gate by killing animals and counter attacking natural disasters.</p>
+		  
+		  <p style="font-size: 18px;"><i>Engine: Unity</i></p>
+		  <p style="font-size: 18px;"><i>Year: 2018</i></p>
+		  <p style="font-size: 18px;"><i>Role: Programming, Level Design, and Game Design</i></p>
+		  <p style="font-size: 18px;"><i>Team: 3</i></p>
+		  
 		  <div class="video-container">
 		  <iframe class="center-block" width="854" height="480" src="https://www.youtube.com/embed/irOgwFXNI68" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		  </div>
