--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="#">
+                    <a class="lightbox" href="/look-away.html">
                         <img width="500" height="400" src="/images/traffic.jpg" alt="Look Away">
                     </a>
                     <div class="caption">
@@ -365,8 +365,6 @@
 								var navbarHeight = $('.navbar').height(); 
 
 $(window).scroll(function() {
-  /*var navbarColor = "62,195,246";//color attr for rgba*/
-  //var navbarColor = "232,203,192";
   var navbarColor="230,92,0";
 
 
