--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                     <a class="lightbox" href="/look-away.html">
-                        <img width="500" height="400" src="/images/traffic.jpg" alt="Look Away">
+                        <img width="500" height="400" src="/images/lookaway.png" alt="Look Away">
                     </a>
                     <div class="caption">
                         <span style="font-size: 20px; font-weight: bolder; text-align: center;">LOOK AWAY</span>
