--- a/zombocalypse.html
+++ b/zombocalypse.html
@@ -242,7 +242,7 @@
 		  
 	
 		  <div class="video-container">
-		  <iframe class="center-block" width="854" height="480" src="https://www.youtube.com/embed/yOnnMwkc6sY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe class="center-block" width="560" height="315" src="https://www.youtube.com/embed/yOnnMwkc6sY?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		  </div>
 		  
 		  <img class="center-block img-responsive" src="/images/zomb/zomb-1.png" alt="" />
