--- a/manvsgod.html
+++ b/manvsgod.html
@@ -243,7 +243,7 @@
 		  <p style="font-size: 18px;"><i>Team: 3</i></p>
 		  
 		  <div class="video-container">
-		  <iframe class="center-block" width="854" height="480" src="https://www.youtube.com/embed/irOgwFXNI68" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe class="center-block" width="560" height="315" src="https://www.youtube.com/embed/irOgwFXNI68?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		  </div>
 		  
 		  <img class="center-block img-responsive" src="/images/manvsgod/mvg-1.png" alt="The God's View" />
