--- a/contact.html
+++ b/contact.html
@@ -238,7 +238,7 @@ body
       <div class="row">
 		<br/>
 		<h1 class="text-center">Contact Me</h1>
-          <p style="font-size:20px">Email: ronmakhouli@gmail.com</p>
+          <p class="text-center" style="font-size:20px">Email: ronmakhouli@gmail.com</p>
 
       </div><!--/.row -->
     </div><!--/.container -->
