--- a/contact.html
+++ b/contact.html
@@ -215,7 +215,7 @@ body
         <div class="navbar-collapse collapse">
           
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">portfolio</a></li>
+            <li class="active"><a href="/">portfolio</a></li>
             <li><a href="/contact.html">contact me</a></li>
           </ul>
         </div><!--/.nav-collapse -->
