--- a/survival-night.html
+++ b/survival-night.html
@@ -188,7 +188,9 @@
 			  
 			}
 			
-
+			img{
+			margin-top: 10px;
+			}
 body
 {
     font-family: 'Raleway', sans-serif;
@@ -215,7 +217,7 @@ body
         <div class="navbar-collapse collapse">
           
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">portfolio</a></li>
+            <li class="active"><a href="/">portfolio</a></li>
             <li><a href="/contact.html">contact me</a></li>
           </ul>
         </div><!--/.nav-collapse -->
