--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ header .btn-link:hover
 	  <!--- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">--->
 
 <div class="container-fluid" style="margin-bottom: 128px;">
-<div class="title-arch">Hello, I am Ron Makhouli and I am a level designer.
+<div class="title-arch">Hello, I am Ron Makhouli and I am a game designer.
 <p>I graduated from George Mason University with a bachelor’s degree in computer game design.</p>
 <p> Throughout my academic years, many of my games were put on the dean’s list as the best games of the semester.</p>
 <p style="padding-top: 48px;">my portfolio</p>
