--- a/home-dev.html
+++ b/home-dev.html
@@ -37,9 +37,15 @@
       integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
       crossorigin="anonymous"
     />
-    <link
+    <!--     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      crossorigin="anonymous"
+    /> -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
       crossorigin="anonymous"
     />
 
@@ -494,7 +500,7 @@
       </div>
 
       <div
-        class="d-none d-md-block"
+        class="d-none d-md-block hidden-xs"
         style="background-color: #93a8ac; height: 25vh;"
       >
         <div style="padding-top: 10vh;display:table;margin: 0 auto">
@@ -518,7 +524,7 @@
 
       <div
         class="
-        d-block d-sm-none"
+        d-block d-sm-none visible-xs"
         style="background-color: #93a8ac; height: 25vh;"
       >
         <div style="padding-top: 12vh;">
@@ -563,9 +569,14 @@
       src="https://code.jquery.com/jquery-1.10.2.min.js"
     ></script>
 
-    <script
+    <!--     <script
       type="text/javascript"
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    ></script> -->
+
+    <script
+      type="text/javascript"
+      src="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"
     ></script>
 
     <script type="text/javascript">
