--- a/home-dev.html
+++ b/home-dev.html
@@ -146,7 +146,16 @@
         opacity: 1;
       }
 
+      .project:focus .project-hover {
+        opacity: 1;
+      }
+
       .project:hover .project-hover hr {
+        width: 100%;
+        height: 5px;
+      }
+
+      .project:focus .project-hover hr {
         width: 100%;
         height: 5px;
       }
