--- a/home-dev.html
+++ b/home-dev.html
@@ -9,12 +9,12 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <link
+    <!--     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
       integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
       crossorigin="anonymous"
-    />
+    /> -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css"
@@ -42,16 +42,22 @@
       integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
       crossorigin="anonymous"
     />
-    <!--     <link
+    <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       crossorigin="anonymous"
-    /> -->
+    />
 
     <!--     <link rel="stylesheet" href="main.css" />
  -->
 
     <style>
+      html,
+      body {
+        max-width: 100%;
+        overflow-x: hidden;
+        height: 100%;
+      }
       /**NEW GRID------------------------------------*/
       .title-arch {
         text-align: center;
@@ -568,15 +574,15 @@
       src="https://code.jquery.com/jquery-1.10.2.min.js"
     ></script>
 
-    <!--     <script
-      type="text/javascript"
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    ></script> -->
-
     <script
       type="text/javascript"
-      src="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     ></script>
+
+    <!--     <script
+      type="text/javascript"
+      src="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"
+    ></script> -->
 
     <script type="text/javascript">
       $(document).ready(function() {
