--- a/after.html
+++ b/after.html
@@ -61,6 +61,7 @@
           <ul class="mobile-menu">
             <li><a href="/">Home</a></li>
             <li class="mobile-menu-gray">Portfolio</li>
+            <li><a href="/fallout.html">Fallout 76</a></li>
             <li><a href="/manvsgod.html">Man vs God</a></li>
             <li><a href="/after.html">After</a></li>
             <li><a href="/zombocalypse.html">Zombocalypse</a></li>
@@ -215,6 +216,12 @@
       </h2>
       <div align="center" style="margin-bottom: 32px;">
         <div>
+          <div class="port-container">
+              <img src="/images/fallout.jpg" alt="img" class="image" />
+              <div class="port-overlay port-overlayFade">
+                <a class="text" href="/fallout.html">Fallout 76</a>
+              </div>
+          </div>
           <div class="port-container">
             <img src="/images/portfolio-mvg.png" alt="img" class="image" />
             <div class="port-overlay port-overlayFade">
