--- a/fallout.html
+++ b/fallout.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Cemented | Ron Makhouli</title>
+    <title>Fallout 76 | Ron Makhouli</title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
@@ -75,11 +75,9 @@
     </div>
 
     <div class="hidden-xs video-container">
-      <img
-        id="myVideo"
-        src="/images/portfolio-cemented.png"
-        style="width: 100%; opacity: 0.6;"
-      />
+      <video autoplay muted loop id="myVideo">
+        <source src="smoke-video-compressed.mp4" type="video/mp4" />
+      </video>
       <div class="main-overlay">
         <h1
           class="main-overlay-h1"
@@ -87,7 +85,7 @@
           data-aos-duration="2600"
           data-aos-once="true"
         >
-          Cemented
+          Fallout 76
         </h1>
         <p
           class="main-overlay-p"
@@ -96,7 +94,7 @@
           data-aos-delay="200"
           data-aos-once="true"
         >
-          PC- Strategy
+          at Bethesda Softworks
         </p>
         <p
           class="main-overlay-p"
@@ -105,7 +103,7 @@
           data-aos-delay="300"
           data-aos-once="true"
         >
-          Level Design
+          Quality Assurance
         </p>
       </div>
 
@@ -121,73 +119,42 @@
       <div class="row" style="margin: 48px;">
         <div class="col-md-12">
           <h2 class="section-heading">
-            Cemented
+            Fallout 76
           </h2>
         </div>
         <div class="col-md-5">
           <ul class="ul-roles">
-            <li>Engine: Unity</li>
-            <li>Year: 2016</li>
-            <li>Role: Level Design</li>
-            <li>Team: 3</li>
+            <li>Year: 2019</li>
+            <li>Role: Quality Assurance</li>
+            <li>Company: Bethesda Softworks</li>
           </ul>
         </div>
         <div class="col-md-7">
           <p class="section-text">
-            Cemented is a two player pc game. Each player created a line behind
-            him as his truck moves around the map.
+            Fallout 76 is an action online RPG published by Bethesda Softworks.
           </p>
           <p class="section-text">
-            The goal is to trap the other player and make him bump into your
-            line.
+            Worked as a Quality Assurance Tester for Fallout 76. Used creative ways to find bugs, crashes, freezes, and exploits. Typed detailed reports on how to reproduce and fix issues. Recognized for finding multiple extreme game breaking issues. Tested in single player and multiplayer team modes.
+ 
           </p>
         </div>
       </div>
+
 
       <div class="iframe-container" style="margin: 48px 0;">
         <iframe
           class="center-block"
           height="433"
           width="770"
-          src="https://www.youtube.com/embed/oMgDuqBeVLI?rel=0"
+          src="https://www.youtube.com/embed/M9FGaan35s0?rel=0"
           frameborder="0"
           allow="autoplay; encrypted-media"
           allowfullscreen
         ></iframe>
       </div>
+
     </div>
     <!--/.container -->
-
-    <div class="container-fluid" style="padding-left:0; padding-right:0;">
-      <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.7/css/swiper.min.css"
-      />
-      <div class="swiper-container">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <div
-              class="slide-inner"
-              style="background-image:url(/images/cemented/cemented-1.png)"
-            ></div>
-          </div>
-          <div class="swiper-slide">
-            <div
-              class="slide-inner"
-              style="background-image:url(/images/cemented/cemented-2.png)"
-            ></div>
-          </div>
-          <div class="swiper-slide">
-            <div
-              class="slide-inner"
-              style="background-image:url(/images/cemented/cemented-3.png)"
-            ></div>
-          </div>
-        </div>
-        <div class="swiper-button-next swiper-button-white"></div>
-        <div class="swiper-button-prev swiper-button-white"></div>
-      </div>
-    </div>
 
     <div
       class="container-fluid d-none d-lg-block"
@@ -198,12 +165,6 @@
       </h2>
       <div align="center" style="margin-bottom: 32px;">
         <div>
-          <div class="port-container">
-              <img src="/images/fallout.jpg" alt="img" class="image" />
-              <div class="port-overlay port-overlayFade">
-                <a class="text" href="/fallout.html">Fallout 76</a>
-              </div>
-          </div>
           <div class="port-container">
             <img src="/images/portfolio-mvg.png" alt="img" class="image" />
             <div class="port-overlay port-overlayFade">
@@ -217,15 +178,15 @@
             </div>
           </div>
           <div class="port-container">
-            <img src="/images/portfolio-zomb.png" alt="img" class="image" />
-            <div class="port-overlay port-overlayFade">
-              <a class="text" href="/zombocalypse.html">Zombocalypse</a>
-            </div>
-          </div>
-          <div class="port-container">
             <img src="/images/lookaway.png" alt="img" class="image" />
             <div class="port-overlay port-overlayFade">
               <a class="text" href="/look-away.html">Look Away</a>
+            </div>
+          </div>
+          <div class="port-container">
+            <img src="/images/portfolio-cemented.png" alt="img" class="image" />
+            <div class="port-overlay port-overlayFade">
+              <a class="text" href="/cemented.html">Cemented</a>
             </div>
           </div>
           <div class="port-container">
@@ -242,6 +203,12 @@
             />
             <div class="port-overlay port-overlayFade">
               <a class="text" href="/survival-night.html">Survival Night</a>
+            </div>
+          </div>
+          <div class="port-container">
+            <img src="/images/portfolio-zomb.png" alt="img" class="image" />
+            <div class="port-overlay port-overlayFade">
+              <a class="text" href="/zombocalypse.html">Zombocalypse</a>
             </div>
           </div>
         </div>
