--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
         background-image: url("/images/portfolio-mvg.png");
       }
 
+      .project-8 {
+        background-image: url("/images/fallout.jpg");
+      }
+
       .project-hover {
         width: 100%;
         height: 100%;
@@ -415,6 +419,16 @@
 
     <div class="container-fluid" style="padding-left:0; padding-right:0;">
       <div id="projects" style="background-color: #93a8ac;">
+          <div
+          class="col-sm-6 col-lg-4 project project-8 wow animated fadeInLeft"
+        >
+          <div class="project-hover">
+            <h2>FALLOUT 76</h2>
+            <hr />
+            <p>Quality Assurance</p>
+            <a href="/fallout.html">See Project</a>
+          </div>
+        </div>
         <div
           class="col-sm-6 col-lg-4 project project-7 wow animated fadeInLeft"
         >
