--- a/look-away.html
+++ b/look-away.html
@@ -232,7 +232,7 @@
               ></a>
             </li>
             <li>
-              <a href="#"><i class="fa fa-file" aria-hidden="true"></i></a>
+              <a href="/Resume.pdf"><i class="fa fa-file" aria-hidden="true"></i></a>
             </li>
             <li>
               <a href="https://www.linkedin.com/in/ronmakhouli/"
@@ -256,7 +256,7 @@
               ></a>
             </li>
             <li>
-              <a href="#"><i class="fa fa-file" aria-hidden="true"></i></a>
+              <a href="/Resume.pdf"><i class="fa fa-file" aria-hidden="true"></i></a>
             </li>
             <li>
               <a href="https://www.linkedin.com/in/ronmakhouli/"
