--- a/fallout.html
+++ b/fallout.html
@@ -228,7 +228,7 @@
               ></a>
             </li>
             <li>
-              <a href="#"><i class="fa fa-file" aria-hidden="true"></i></a>
+              <a href="/Resume.pdf"><i class="fa fa-file" aria-hidden="true"></i></a>
             </li>
             <li>
               <a href="https://www.linkedin.com/in/ronmakhouli/"
@@ -252,7 +252,7 @@
               ></a>
             </li>
             <li>
-              <a href="#"><i class="fa fa-file" aria-hidden="true"></i></a>
+              <a href="/Resume.pdf"><i class="fa fa-file" aria-hidden="true"></i></a>
             </li>
             <li>
               <a href="https://www.linkedin.com/in/ronmakhouli/"
