--- a/manvsgod.html
+++ b/manvsgod.html
@@ -267,7 +267,7 @@
               ></a>
             </li>
             <li>
-              <a href="#"><i class="fa fa-file" aria-hidden="true"></i></a>
+              <a href="/Resume.pdf"><i class="fa fa-file" aria-hidden="true"></i></a>
             </li>
             <li>
               <a href="https://www.linkedin.com/in/ronmakhouli/"
@@ -291,7 +291,7 @@
               ></a>
             </li>
             <li>
-              <a href="#"><i class="fa fa-file" aria-hidden="true"></i></a>
+              <a href="/Resume.pdf"><i class="fa fa-file" aria-hidden="true"></i></a>
             </li>
             <li>
               <a href="https://www.linkedin.com/in/ronmakhouli/"
