--- a/pc-cat.html
+++ b/pc-cat.html
@@ -261,7 +261,7 @@
               ></a>
             </li>
             <li>
-              <a href="#"><i class="fa fa-file" aria-hidden="true"></i></a>
+              <a href="/Resume.pdf"><i class="fa fa-file" aria-hidden="true"></i></a>
             </li>
             <li>
               <a href="https://www.linkedin.com/in/ronmakhouli/"
@@ -285,7 +285,7 @@
               ></a>
             </li>
             <li>
-              <a href="#"><i class="fa fa-file" aria-hidden="true"></i></a>
+              <a href="/Resume.pdf"><i class="fa fa-file" aria-hidden="true"></i></a>
             </li>
             <li>
               <a href="https://www.linkedin.com/in/ronmakhouli/"
