--- a/survival-night.html
+++ b/survival-night.html
@@ -262,7 +262,7 @@
               ></a>
             </li>
             <li>
-              <a href="#"><i class="fa fa-file" aria-hidden="true"></i></a>
+              <a href="/Resume.pdf"><i class="fa fa-file" aria-hidden="true"></i></a>
             </li>
             <li>
               <a href="https://www.linkedin.com/in/ronmakhouli/"
@@ -286,7 +286,7 @@
               ></a>
             </li>
             <li>
-              <a href="#"><i class="fa fa-file" aria-hidden="true"></i></a>
+              <a href="/Resume.pdf"><i class="fa fa-file" aria-hidden="true"></i></a>
             </li>
             <li>
               <a href="https://www.linkedin.com/in/ronmakhouli/"
